<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- MAIN ACTIVITY -->
    <string name="toolbar_title_login_activity">I\'m Hungry !</string>

    <string name="facebook_application_id" translatable="false">448121493270955</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb448121493270955</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="fab_content_desc" translatable="false" />

    <!-- LOGIN ACTIVITY -->
    <string name="error_authentication_canceled" translatable="false">Authentification annulée&#8230;</string>
    <string name="error_no_internet" translatable="false">Aucune connexion internet !</string>
    <string name="error_unknown_error" translatable="false">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed" translatable="false">Authentification réussie !</string>


    <string name="i_m_hungry">I\'m hungry!</string>
    <string name="john_is_eating_french_le_zinc" translatable="false">John is eating french (Le Zinc)</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="list_view">List View</string>
    <string name="settings">Settings</string>
    <string name="go4lunch" translatable="false">Go4Lunch</string>
    <string name="john_smith" translatable="false">John Smith</string>
    <string name="jsmith_1337_gmail_com" translatable="false">jsmith.1337@gmail.com</string>
    <string name="map_view">Map View</string>
    <string name="workmates">Workmates</string>
    <string name="logout">LOGOUT</string>
    <string name="available_wormates">Available Workmates</string>
    <string name="Le_Zinc" translatable="false">Le Zinc</string>
    <string name="address" translatable="false">12 Rue du Faubourg Poissonière</string>
    <string name="is_open">" is open"</string>
    <string name="is_close">" is closed"</string>
    <string name="no_info"> do not say if they are open</string>
    <string name="distance" translatable="false">120m</string>
    <string name="workmates_going" translatable="false">(0)</string>
    <string name="loading">loading...</string>
    <string name="call" translatable="false">CALL</string>
    <string name="like" translatable="false">LIKE</string>
    <string name="website" translatable="false">WEBSITE</string>
    <string name="radius_distance">Maximum Distance :</string>
    <string name="you_are_here">You Are Here</string>
    <string name="no_restaurant">Please select a restaurant</string>
    <string name="no_restaurant_address" translatable="false" />
    <string name="restDEselected">Restaurant deleted</string>
    <string name="restSelected">Restaurant selected</string>
    <string name="is_eating">" is eating at "</string>
    <string name="hasnt_decided_yet">" hasn't decided yet."</string>
    <string name="is_joining">" is joining!"</string>
    <string name="notifications">Notifications</string>

    <!-- REF NAME -->
    <string name="newRadius" translatable="false">newRadius</string>
    <string name="searchLat" translatable="false">searchLat</string>
    <string name="searchLng" translatable="false">searchLng</string>
    <string name="isSearch" translatable="false">isSearch</string>
    <string name="userRestID" translatable="false">userRestID</string>
    <string name="userRestName" translatable="false">userRestName</string>
    <string name="userRestAddress" translatable="false">userRestAddress</string>
    <string name="isRestaurantSelect" translatable="false">isRestSelected</string>
    <string name="isFABClick" translatable="false">isFABClick</string>
    <string name="rest_is_notify" translatable="false">REST_IS_NOTIFY</string>
    <string name="rst_address_notify" translatable="false">REST_ADDRESS_NOTIFY</string>
    <string name="rest_name_notify" translatable="false">REST_NAME_NOTIFY</string>
    <string name="chat">Chat</string>
    <string name="text_view_mentor_chat_error">This chat as no message yet...</string>
    <string name="text_input_title_mentor_chat_activity">Compose your message</string>
    <string name="button_title_mentor_chat_activity">SEND</string>

</resources>