<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:orderInCategory="1"
        android:title="@string/map_view"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_place"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:orderInCategory="2"
        android:title="@string/list_view"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_workmates"
        android:icon="@drawable/ic_baseline_people_24"
        android:orderInCategory="3"
        android:title="@string/workmates"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_chat_general"
        android:icon="@drawable/ic_baseline_chat_24"
        android:orderInCategory="3"
        android:title="@string/chat"
        app:showAsAction="always" />
</menu>