<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/restaurant_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/Le_Zinc"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/address"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/restaurant_is_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/is_open"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="4dp"
            android:text="@string/distance"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/workmates_going"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:maxLines="1"
            android:text="@string/workmates_going"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_workmates_going" />

        <RatingBar
            android:id="@+id/restaurant_stars"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:isIndicator="true"
            android:numStars="3"
            android:progressTint="@color/ratingStar"
            android:stepSize="0.5"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp">

        <ImageView
            android:id="@+id/restaurant_picture"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:maxWidth="?android:attr/listPreferredItemHeight"
            android:maxHeight="?android:attr/listPreferredItemHeight"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>

</LinearLayout>