<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/recyclerViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/messageContainer">

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/emptyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_mentor_chat_error"
            android:textAlignment="center"
            android:layout_margin="20dp"/>

        <!-- RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- IMAGE CHOSEN PREVIEW -->
    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_above="@id/messageContainer"/>

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/messageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <!-- ADD FILE BUTTON -->
        <ImageButton
            android:id="@+id/addFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_add_circle_black_24px"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <!-- TEXT MESSAGE EDIT TEXT -->
        <EditText
            android:id="@+id/chatEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="13sp"
            android:hint="@string/text_input_title_mentor_chat_activity"/>

        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/sendButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_title_mentor_chat_activity" />

    </LinearLayout>

</RelativeLayout>